[package]
name = "github-discussion-slack"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# github-flows = "0.5.1"
slack-flows = "0.2.6"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
dotenv = "0.15.0"
chrono = "0.4.26"
serde_json = "1.0.96"
serde = {version = "1.0.163", features = ["derive"]}
http_req_wasi = "0.11.1"
schedule-flows = "0.1.10"
